# LambdaLisp

./: .gitignore  README.md  compiler.py  hello-world.dbn  lambda  pyproject.toml  reverse.dbn  run.sh  shell.nix  test_compiler.py  to_bytes.py
justine/: Blc  asc2bin.com  blc  blcdump.com  bru2bin.com  compile.sh  invert.blc  lam2bin.com  lam2sh.sh  lam2sqr.sh  lambda.com  reverse.blc  sqr2lam.sh  trace.sh  tromp.com
